@@ -9,5 +9,7 @@
 </ul></div>
 
 </div>
-
-<img class="icon" src="icons/web.png" alt="" />
+<!-- We use the absolute path to the Firefox icon rather than an image from
+slides/icons because we don't know at build time if this will be the real
+Firefox icon or the Abrowser one. -->
+<p class="icon"><img src="/usr/share/pixmaps/firefox-3.5.png" id="reflection" /></p>
