@@ -19,6 +19,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	<script type="text/javascript" src="link/crossfade.js"></script>
 	
 	<script type="text/javascript" src="directory.js"></script>
+	<script src="link/scriptaculous.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -97,6 +98,50 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 		Crossfade.setup({autoLoad:false, random:false, interval:30, duration:0.5, loop:false, transition:Crossfade.Transition.Cover });
 	};
 	var cf2 = new Crossfade('slideshow');
+</script>
+<script type="text/javascript"> 
+var Reflector = {
+  reflect: function(element) {
+    element = $(element);
+    options = $H({
+      amount: 1/3,
+      opacity: 1/3,
+      fade: 2,
+      blur: 0
+    }).merge(arguments[1] || {});
+ 
+    var p = element.parentNode, n = element.nextSibling;
+    var d = 1.0/(element.height*options.amount);
+    var f = document.createDocumentFragment();
+ 
+    (element.height*options.amount).times( function(line) {
+      var blurdir = 0;
+      var opacitymodifier= 1;
+      var heightmodifier= 1;
+      if (options.blur==1) { 
+        blurdir = (line % 2); 
+        opacitymodifier = 2;
+        heightmodifier = 3;
+      }
+      var h = Builder.node('div',{
+        style: 'height:'+heightmodifier+'px; width:'+element.width+'px;'
+              +'background-image:url('+element.src+');'
+              +'background-position:0'+(heightmodifier-2)+'px 0'+(line+1)+'px;'
+              +'overflow:hidden;'
+              +'margin-top:-'+(heightmodifier-1)+'px;'
+      });
+      $(h).setOpacity(Math.pow(1-d*line,options.fade)*options.opacity/opacitymodifier); // IE needs the $()
+      f.appendChild(h);
+    });
+ 
+    // update the view now
+    p.insertBefore(f,n);
+  }
+}
+ 
+Event.observe(window,'load', function(){
+  Reflector.reflect('reflection',{ amount:2/3, opacity:1/2, blur:1 });
+});
 </script>
 
 <div id="debug-controls">
